# molasses_vst

./: .gitignore  CMakeLists.txt  Chunker.jucer  Molasses_vst.jucer
Config/: c_cpp_properties.json  launch.json  settings.json
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
